<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PasswordLocker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="createPassword">Create a password</string>
    <string name="createPasswordBtnText">Create Password</string>
    <string name="title_activity_passwords_home">PasswordsHome</string>
    <string name="addPassword">Add Account</string>
    <string name="title_activity_login">login</string>
    <string name="enterPassword">Password</string>
    <string name="login">Login</string>
    <string name="passkey">Enter Password</string>
    <string name="addAccount">Add Account</string>
    <string name="welcome_string">Hi welcome to password locker</string>
    <string name="password">Your password</string>
    <string name="password_confirmation">Password confirmation</string>
    <string name="signup">Signup</string>

</resources>
