<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAllCaps="true"
            android:textSize="18dp"
            android:text="@string/welcome_string"/>
    </RelativeLayout>
    <LinearLayout android:layout_weight="0.9"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/enterPassword"
                android:id="@+id/label_2" />

            <EditText
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:password="true"
                android:hint="@string/password"
                android:ems="10"
                android:id="@+id/password" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/password_confirmation"
                android:id="@+id/label_3" />

            <EditText
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:password="true"
                android:hint="@string/password"
                android:ems="10"
                android:id="@+id/password_confirmation" />
            <Button
                android:layout_width="wrap_content"
                android:text="@string/signup"
                android:id="@+id/signup"
                android:layout_height="wrap_content" />
        </LinearLayout>

 </LinearLayout>